added experimentel AbstractFlightBehavior  to provide to ways for a flight behavior

--- a/flight-examples/src/main/java/de/agilecoders/wicket/HomePage.html
+++ b/flight-examples/src/main/java/de/agilecoders/wicket/HomePage.html
@@ -6,8 +6,10 @@
 		<link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:regular,bold' rel='stylesheet' type='text/css' />
 	</head>
 	<body>
+        <h1>Wicket Flight Examples:</h1>
 		<div>
-            <span wicket:id="behaviorTest">This span should contain a flight behavior</span>
+            <h3>Rolling label</h3>
+            <span wicket:id="rollingLabel" />
 		</div>
 	</body>
 </html>
