changed rolling to glowing example

--- a/flight-examples/src/main/java/de/agilecoders/wicket/HomePage.html
+++ b/flight-examples/src/main/java/de/agilecoders/wicket/HomePage.html
@@ -8,8 +8,8 @@
 	<body>
         <h1>Wicket Flight Examples:</h1>
 		<div>
-            <h3>Rolling label</h3>
-            <span wicket:id="rollingLabel" />
+            <h3>Glowing label:</h3>
+            <span wicket:id="glowingLabel" />
 		</div>
 	</body>
 </html>
