Re-enable Flight debug - flight/ is now in webapp and require.js can find it.
Before it was in bower_components

--- a/flight-email-example/src/main/java/de/agilecoders/wicket/flight/example/email/HomePage.html
+++ b/flight-email-example/src/main/java/de/agilecoders/wicket/flight/example/email/HomePage.html
@@ -58,11 +58,11 @@
         <script>
             require(
                     [
-//                        'flight/lib/debug'
+                        'flight/lib/debug'
                     ],
 
                     function(debug) {
-                        //debug.enable(true);
+                        debug.enable(true);
                         require(['app/boot/page'], function(initialize) {
                             initialize();
                         });
