extract mail_items table component

--- a/flight-email-example/src/main/java/de/agilecoders/wicket/flight/example/email/HomePage.html
+++ b/flight-email-example/src/main/java/de/agilecoders/wicket/flight/example/email/HomePage.html
@@ -40,15 +40,13 @@
                         </div>
                     </div>
 
-                    <table id="mail_items" class="hero-unit table table-hover" style="background-color: #FFFFFF">
-                        <tbody id="mail_items_TB">
-                        </tbody>
+                    <table wicket:id="mailItems" id="mail_items" class="hero-unit table table-hover" style="background-color: #FFFFFF">
                     </table>
                 </div>
             </div>
         </div>
 
-        <div wicket:id="compose_box" id="compose_box" class="compose-box modal hide fade in"></div>
+        <div wicket:id="composeBox" id="compose_box" class="compose-box modal hide fade in"></div>
 
         <div id="move_to_selector" class="move-to-selector hide"></div>
 
