Use WicketFlight.js more and more

--- a/flight-email-example/src/main/java/de/agilecoders/wicket/flight/example/email/HomePage.html
+++ b/flight-email-example/src/main/java/de/agilecoders/wicket/flight/example/email/HomePage.html
@@ -46,11 +46,11 @@
             </div>
         </div>
 
-        <div wicket:id="composeBox" id="compose_box" class="compose-box modal hide fade in"></div>
+        <div wicket:id="composeBox" class="compose-box modal hide fade in"></div>
 
         <div id="move_to_selector" class="move-to-selector hide"></div>
 
-        <wicket:container wicket:id="requireJsConfig"></wicket:container>
+        <!--<wicket:container wicket:id="requireJsConfig"></wicket:container>-->
         <!--<script src="bower_components/es5-shim/es5-shim.js"></script>-->
         <!--<script src="bower_components/es5-shim/es5-sham.js"></script>-->
         <script>
